--- a/style.css
+++ b/style.css
@@ -51,6 +51,24 @@ p{
 	font-style: normal;
 }
 
+div.flex-video {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+	margin: 50px 0; /* esto es opcional */
+	clear: both;
+}
+
+div.flex-video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 .article-content.news-bottom > img{
 	/*height: 280px !important;*/
 	overflow: hidden;
